# robotframework-mock

./: .gitignore  README.md  RELEASE.md  example.robot  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml  pypi-publish.yml  python-tests.yml  robocop.yml  robot-tests.yml  roobt-tests.yml
doc/examples/: examples.robot
src/MockLibrary/: __init__.py
src/MockResource/: __init__.py
src/mock/: MockBuiltin.py  MockLibrary.py  mock_builtin.py  mock_library.py
src/mock/lib/: MockLibraryWorker.py
test/keyword/: keyword-tests.robot  library-keyword-tests.robot  resource-keyword-tests.robot
test/keyword/resources/: DynamicLibrary.py  dynamic_library_resolver.py  resource-test-2.resource  resource-test.resource
test/unit/: sample_custom_resolver.py  test_mock_library.py  test_mock_resource.py
