[metadata]
name = robotframework-mock
version = 0.2.0
author = Lajos Olah
author_email = lajos.olah.jr@gmail.com
description = A Robot Framework library for mocking keywords in unit tests
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/olesz/robotframework-mock
license = Apache-2.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Framework :: Robot Framework
    Framework :: Robot Framework :: Library

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    robotframework>=7.0

[options.packages.find]
where = src
